--- a/rainlily/.config/BetterDiscord/plugins/BetterFriendList.config.json
+++ b/rainlily/.config/BetterDiscord/plugins/BetterFriendList.config.json
@@ -4,6 +4,7 @@
 	},
 	"general": {
 		"addTotalAmount": true,
+		"addHiddenCategory": true,
 		"addSortOptions": true,
 		"addSearchbar": true,
 		"addMutualGuild": true
