--- a/rainlily/.config/BetterDiscord/plugins/PinDMs.config.json
+++ b/rainlily/.config/BetterDiscord/plugins/PinDMs.config.json
@@ -12,6 +12,11 @@
 			"guildList": {
 				"296599824319643669": 0
 			}
+		},
+		"null": {
+			"guildList": {
+				"296599824319643669": 0
+			}
 		}
 	},
 	"pinnedRecents": {
