--- a/rainlily/.config/BetterDiscord/plugins/RemoveBlockedUsers.config.json
+++ b/rainlily/.config/BetterDiscord/plugins/RemoveBlockedUsers.config.json
@@ -19,7 +19,9 @@
 		"autocompletes": true,
 		"memberList": true,
 		"voiceList": true,
-		"voiceChat": true
+		"voiceChat": true,
+		"channelList": true,
+		"recentDms": true
 	},
 	"settings": {
 		"disableNotifications": true,
