--- a/rainlily/.config/BetterDiscord/plugins/TopRoleEverywhere.config.json
+++ b/rainlily/.config/BetterDiscord/plugins/TopRoleEverywhere.config.json
@@ -1,4 +1,18 @@
 {
+	"general": {
+		"useOtherStyle": false,
+		"useBlackFont": false,
+		"includeColorless": false,
+		"showOwnerRole": false,
+		"disableForBots": false,
+		"addUserId": false,
+		"userIdFirst": false
+	},
+	"places": {
+		"chat": true,
+		"memberList": true,
+		"voiceList": true
+	},
 	"settings": {
 		"addUserID": false,
 		"disableForBots": false,
