--- a/rainlily/.config/polybar/config.ini
+++ b/rainlily/.config/polybar/config.ini
@@ -4,34 +4,15 @@
 ; pipe sed -e 's/English (US)/EN/g;s/Mozc/JA/g'
 ; into /opt/polybar-fcitx-scripts/react
 
-[bar/main]
-	bottom = false
-	monitor = HDMI-A-0
+[bar/main-bottom]
+	bottom = true
+	monitor = DisplayPort-0
 
 	wm-restack = bspwm
 
-	modules-left = sep me sep pacman sep bspwm
-	modules-right = player-mpris-tail sep pulseaudio-control sep noisetorch sep weather sep date sep time sep
-
-	font-0 = "Source Han Code JP:size=10;2"
-	font-1 = "Siji:size=12;1"
-
-	background = #88000000
-
-	height = 32
-
-	line-size = 1
-
-	fixed-center = true
-
-[bar/sub]
-	bottom = true
-
-	wm-restack = i3
-
 	; network-traffic is buggy as fk
-	modules-left = sep cpu cpu-temp sep gpu-temp sep memory sep
-	modules-center = 
+	modules-left = sep qbittorrent
+	modules-center = bspwm-bottom
 	modules-right = sep mullvad sep network-ipinfo network-traffic sep
 
 	font-0 = "Source Han Code JP:size=10;2"
@@ -46,6 +27,70 @@
 	fixed-center = true
 
 	tray-position = right
+
+[bar/sub-top]
+	bottom = false
+	monitor = HDMI-A-0
+
+	wm-restack = bspwm
+
+	modules-left = sep me sep pacman sep
+	modules-center = bspwm-all
+	modules-right = sep player-mpris-tail sep pulseaudio-control sep noisetorch sep weather sep date sep time sep
+
+	font-0 = "Source Han Code JP:size=10;2"
+	font-1 = "Siji:size=12;1"
+
+	background = #88000000
+
+	height = 32
+
+	line-size = 1
+
+	fixed-center = true
+
+[bar/portrait-top]
+	bottom = false
+	monitor = DVI-D-0
+
+	wm-restack = bspwm
+
+	modules-left = sep cpu cpu-temp sep gpu-temp sep memory sep
+	modules-center = bspwm-top
+	modules-right = sep weather sep date sep time sep
+
+	font-0 = "Source Han Code JP:size=10;2"
+	font-1 = "Siji:size=12;1"
+
+	background = #88000000
+
+	height = 32
+
+	line-size = 1
+
+	fixed-center = true
+
+[bar/portrait-bottom]
+	bottom = true
+	monitor = DVI-D-0
+
+	wm-restack = bspwm
+
+	; network-traffic is buggy as fk
+	modules-left = 
+	modules-center = sep network-ipinfo network-traffic sep
+	modules-right = 
+
+	font-0 = "Source Han Code JP:size=10;2"
+	font-1 = "Siji:size=12;1"
+
+	background = #88000000
+
+	height = 32
+
+	line-size = 1
+
+	fixed-center = true
 
 
 ;  _____       _     _         
@@ -65,15 +110,15 @@
 	content-underline = #FF69B4
 	click-left = kill -s USR1 $(pidof deadd-notification-center)
 
-[module/bspwm]
+[module/bspwm-top]
 	type = internal/bspwm
 	format = <label-state>
 
-	pin-workspaces = false
+	pin-workspaces = true
 
 	label-focused-underline = #fff
 	label-occupied-underline = #fff
-	label-focused-background = #3f3f3f
+	label-focused-background = #000000cc
 
 	label-focused = %name%
 	label-occupied = %name%
@@ -83,26 +128,41 @@
 	label-occupied-padding = 1
 	label-empty-padding = 1
 
-[module/i3]
-	type = internal/i3
+[module/bspwm-bottom]
+	type = internal/bspwm
 	format = <label-state>
-	index-sort = true
-	label-focused = %index%
-	label-focused-underline = #fff
+
+	pin-workspaces = true
+
+	label-focused-overline = #fff
+	label-occupied-overline = #fff
+	label-focused-background = #000000cc
+
+	label-focused = %name%
+	label-occupied = %name%
+	label-empty = %name%
+
 	label-focused-padding = 1
+	label-occupied-padding = 1
+	label-empty-padding = 1
 
-	label-unfocused = %index%
-	label-unfocused-padding = 1
+[module/bspwm-all]
+	type = internal/bspwm
+	format = <label-state>
 
-	label-visible = %index%
-	label-visible-underline = #fff
-	label-visible-padding = 1
+	pin-workspaces = false
 
-[module/i3-mode]
-	type = internal/i3
-	format = <label-mode>
-	label-mode = %{F#FF0000}%mode%
-	format-underline = #f00
+	label-focused-underline = #fff
+	label-occupied-underline = #fff
+	label-focused-background = #000000cc
+
+	label-focused = %name%
+	label-occupied = %name%
+	label-empty = %name%
+
+	label-focused-padding = 1
+	label-occupied-padding = 1
+	label-empty-padding = 1
 
 [module/xwindow]
 	type = internal/xwindow
@@ -137,7 +197,7 @@
 
 	format-prefix = 
 	label = " %percentage%%"
-	format-overline = #fff
+	format-underline = #fff
 
 [module/cpu-temp]
 	type = internal/temperature
@@ -156,8 +216,8 @@
 	label = " %temperature-c%"
 	label-warn = " %temperature-c%"
 	label-warn-foreground = #f00
-	format-overline = #fff
-	format-warn-overline = #fff
+	format-underline = #fff
+	format-warn-underline = #fff
 
 [module/gpu-temp]
 	type = internal/temperature
@@ -177,14 +237,14 @@
 	label = " %temperature-c%"
 	label-warn = " %temperature-c%"
 	label-warn-foreground = #f00
-	format-overline = #fff
-	format-warn-overline = #fff
+	format-underline = #fff
+	format-warn-underline = #fff
 
 [module/gpu-usage]
 	type = custom/script
 	exec = /home/insti/.config/polybar/scripts/system-ati-radeontop.sh
 	interval = 1
-	label-overline = #fff
+	label-underline = #fff
 
 [module/memory]
 	type = internal/memory
@@ -195,7 +255,7 @@
 	format-prefix = 
 
 	label = " %percentage_used%% %gb_used%"
-	format-overline = #fff
+	format-underline = #fff
 
 
 [module/pulseaudio]
@@ -239,7 +299,7 @@
 	# You can copy-paste your options for each possible action, which is more
 	# trouble-free but repetitive, or apply only the relevant ones (for example
 	# --sink-blacklist is only needed for next-sink).
-	exec = pulseaudio-control --icons-volume "," --icon-muted "" --sink-nicknames-from "device.description" --sink-nickname "alsa_output.pci-0000_0e_00.4.analog-stereo: " --sink-nickname "alsa_output.usb-Apple__Inc._USB-C_to_3.5mm_Headphone_Jack_Adapter_DWH0263000YJKLTA9-00.analog-stereo: " listen
+	exec = pulseaudio-control --icons-volume "," --icon-muted "" --sink-nicknames-from "device.description" --sink-nickname "alsa_output.pci-0000_0e_00.4.analog-stereo: " --sink-nickname "alsa_output.pci-0000_0b_00.4.analog-stereo: " --sink-nickname "alsa_output.usb-Apple__Inc._USB-C_to_3.5mm_Headphone_Jack_Adapter_DWH0263000YJKLTA9-00.analog-stereo: " listen
 	click-right = exec pavucontrol &
 	click-middle = pulseaudio-control togmute
 	click-left = pulseaudio-control --sink-blacklist "alsa_output.pci-0000_09_00.1.hdmi-stereo-extra2,nui_mic_denoised_out,nui_mic_raw_in,echoCancel_sink,pulseeffects_sink" next-sink
@@ -248,7 +308,7 @@
 
 [module/player-mpris-tail]
 	type = custom/script
-	exec = ~/.config/polybar/scripts/player-mpris-tail.py --format '{icon} {title} by {artist}' -b firefox -b Discord
+	exec = ~/.config/polybar/scripts/player-mpris-tail.py --format '{icon} {title} by {artist}' -b firefox -b Discord -b Chromium
 	tail = true
 	click-left = ~/.config/polybar/scripts/player-mpris-tail.py play-pause &
 	click-right = ~/.config/polybar/scripts/player-mpris-tail.py next &
