--- a/rainlily/.config/BetterDiscord/plugins/0BDFDB.config.json
+++ b/rainlily/.config/BetterDiscord/plugins/0BDFDB.config.json
@@ -1,20 +1,18 @@
 {
 	"changeLogs": {
-		"BDFDB": "1.6.6",
-		"BadgesEverywhere": "1.7.4",
-		"BetterFriendList": "1.3.3",
+		"BDFDB": "1.7.9",
+		"BetterFriendList": "1.3.6",
 		"BetterNsfwTag": "1.2.7",
 		"BetterSearchPage": "1.2.0",
-		"CharCounter": "1.5.3",
+		"CharCounter": "1.5.4",
 		"CompleteTimestamps": "1.5.7",
 		"CopyRawMessage": "1.1.2",
-		"ImageUtilities": "4.4.1",
+		"ImageUtilities": "4.4.4",
 		"PinDMs": "1.8.3",
-		"RemoveBlockedMessages": "1.2.6",
-		"SendLargeMessages": "1.6.7",
-		"ServerDetails": "1.0.5",
-		"ShowHiddenChannels": "2.9.7",
-		"TopRoleEverywhere": "3.0.5"
+		"RemoveBlockedUsers": "1.3.1",
+		"SendLargeMessages": "1.6.8",
+		"ShowHiddenChannels": "3.0.1",
+		"TopRoleEverywhere": "3.0.7"
 	},
 	"choices": {
 		"toastPosition": "right"
