--- a/rainlily/.config/gtk-3.0/settings.ini
+++ b/rainlily/.config/gtk-3.0/settings.ini
@@ -3,7 +3,7 @@ gtk-theme-name=Materia-dark
 gtk-icon-theme-name=Papirus-Dark
 gtk-font-name=Source Han Code JP 9
 gtk-cursor-theme-name=Hackneyed
-gtk-cursor-theme-size=0
+gtk-cursor-theme-size=12
 gtk-toolbar-style=GTK_TOOLBAR_BOTH
 gtk-toolbar-icon-size=GTK_ICON_SIZE_LARGE_TOOLBAR
 gtk-button-images=1
@@ -13,3 +13,4 @@ gtk-enable-input-feedback-sounds=1
 gtk-xft-antialias=1
 gtk-xft-hinting=1
 gtk-xft-hintstyle=hintfull
+gtk-decoration-layout = appmenu
