--- a/rainlily/.config/polybar/config.ini
+++ b/rainlily/.config/polybar/config.ini
@@ -34,8 +34,8 @@
 
 	wm-restack = bspwm
 
-	modules-left = sep me sep pacman sep
-	modules-center = bspwm-all
+	modules-left = sep me sep pacman sep bspwm-all sep
+	modules-center = 
 	modules-right = sep player-mpris-tail sep pulseaudio-control sep noisetorch sep weather sep date sep time sep
 
 	font-0 = "Source Han Code JP:size=10;2"
@@ -55,7 +55,7 @@
 
 	wm-restack = bspwm
 
-	modules-left = sep cpu cpu-temp sep gpu-temp sep memory sep
+	modules-left = sep cpu cpu-temp sep gpu-usage gpu-temp sep memory sep
 	modules-center = bspwm-top
 	modules-right = sep weather sep date sep time sep
 
@@ -231,7 +231,7 @@
 
 	format = <label>
 	format-warn = <label-warn>
-	format-prefix = 
+	; format-prefix = 
 
 	units = true
 	label = " %temperature-c%"
@@ -244,7 +244,9 @@
 	type = custom/script
 	exec = /home/insti/.config/polybar/scripts/system-ati-radeontop.sh
 	interval = 1
-	label-underline = #fff
+	format-underline = #fff
+	format = <label>
+	format-prefix =  
 
 [module/memory]
 	type = internal/memory
