--- a/rainlily/.config/BetterDiscord/plugins/0BDFDB.config.json
+++ b/rainlily/.config/BetterDiscord/plugins/0BDFDB.config.json
@@ -1,17 +1,18 @@
 {
 	"changeLogs": {
-		"BDFDB": "1.7.9",
-		"BetterFriendList": "1.3.6",
+		"BDFDB": "1.8.2",
+		"BetterFriendList": "1.3.8",
 		"BetterNsfwTag": "1.2.7",
 		"BetterSearchPage": "1.2.0",
-		"CharCounter": "1.5.4",
-		"CompleteTimestamps": "1.5.7",
+		"CharCounter": "1.5.6",
+		"CompleteTimestamps": "1.5.9",
 		"CopyRawMessage": "1.1.2",
-		"ImageUtilities": "4.4.4",
+		"ImageUtilities": "4.4.5",
 		"PinDMs": "1.8.3",
-		"RemoveBlockedUsers": "1.3.1",
+		"RemoveBlockedUsers": "1.3.2",
 		"SendLargeMessages": "1.6.8",
-		"ShowHiddenChannels": "3.0.1",
+		"ShowHiddenChannels": "3.0.2",
+		"SplitLargeMessages": "1.7.0",
 		"TopRoleEverywhere": "3.0.7"
 	},
 	"choices": {
@@ -21,5 +22,9 @@
 		"showToasts": true,
 		"showSupportBadges": true,
 		"useChromium": false
+	},
+	"hashes": {
+		"0BDFDB.data.json": "8db8f4af692361da2324a203eac2e0688af07cee",
+		"0BDFDB.raw.css": "80b6d40ad2af425192bcab890200d7814ea6d9a1"
 	}
 }
