--- a/rainlily/.config/BetterDiscord/plugins/StatusEverywhere.config.json
+++ b/rainlily/.config/BetterDiscord/plugins/StatusEverywhere.config.json
@@ -1,6 +1,16 @@
 {
     "currentVersionInfo": {
-        "version": "0.4.9",
+        "version": "2.0.0",
         "hasShownChangelog": true
+    },
+    "settings": {
+        "chatRadialStatus": true,
+        "memberlistRadialStatus": true,
+        "accountSettingsRadialStatus": true,
+        "guildSettingsRadialStatus": true,
+        "userProfileRadialStatus": true,
+        "directMessagesRadialStatus": true,
+        "userPopoutRadialStatus": true,
+        "friendsPageRadialStatus": true
     }
 }
