changed font to fira code, changed neofetch output

--- a/rainlily/.config/neofetch/config.conf
+++ b/rainlily/.config/neofetch/config.conf
@@ -4,36 +4,44 @@ print_info() {
     info title
     info underline
 
-    info "OS" distro
-    info "Host" model
-    info "Kernel" kernel
-    info "Uptime" uptime
-    info "Packages" packages
-    info "Shell" shell
-    info "Resolution" resolution
-    info "DE" de
-    info "WM" wm
-    info "WM Theme" wm_theme
-    info "Theme" theme
-    info "Icons" icons
-    info "Terminal" term
-    info "Terminal Font" term_font
-    info "CPU" cpu
-    info "GPU" gpu
-    info "Memory" memory
+    prin "Hardware"
+    info "﬙" cpu
+    prin "﴾" "AMD Radeon RX 550"
+    prin "﴾" "AMD Radeon RX 6800 XT"
+    info "" memory
+    info "" resolution
 
+    prin ""
+    
+    prin "Software"
+    info "" distro
+    info "" kernel
+    info "" shell
+    info "" term
+    # info "Host" model
+    info "" packages
+    info "" wm
+    # info "WM Theme" wm_theme
+    info "" theme
+    info "" icons
+    # info "Terminal Font" term_font   
+    info "" font
+    info "" locale
+    info "" uptime
+    
+    # info "DE" de
+    # info "GPU" gpu
     # info "GPU Driver" gpu_driver  # Linux/macOS only
     # info "CPU Usage" cpu_usage
     # info "Disk" disk
     # info "Battery" battery
-    # info "Font" font
+    
     # info "Song" song
     # [[ "$player" ]] && prin "Music Player" "$player"
     # info "Local IP" local_ip
     # info "Public IP" public_ip
     # info "Users" users
-    # info "Locale" locale  # This only works on glibc systems.
-
+    
     info cols
 }
 
@@ -144,7 +152,7 @@ memory_unit="mib"
 # on:   '998 (pacman), 8 (flatpak), 4 (snap)'
 # tiny: '908 (pacman, flatpak, snap)'
 # off:  '908'
-package_managers="on"
+package_managers="false"
 
 
 # Shell
@@ -218,7 +226,7 @@ cpu_brand="on"
 # Example:
 # on:  'Intel i7-6500U (4) @ 3.1GHz'
 # off: 'Intel i7-6500U (4)'
-cpu_speed="on"
+cpu_speed="off"
 
 # CPU Cores
 # Display CPU cores in output
@@ -232,7 +240,7 @@ cpu_speed="on"
 # logical:  'Intel i7-6500U (4) @ 3.1GHz' (All virtual cores)
 # physical: 'Intel i7-6500U (2) @ 3.1GHz' (All physical cores)
 # off:      'Intel i7-6500U @ 3.1GHz'
-cpu_cores="logical"
+cpu_cores="off"
 
 # CPU Temperature
 # Hide/Show CPU temperature.
@@ -313,7 +321,7 @@ refresh_rate="off"
 # Example:
 # on:  'Numix, Adwaita'
 # off: 'Numix [GTK2], Adwaita [GTK3]'
-gtk_shorthand="off"
+gtk_shorthand="on"
 
 
 # Enable/Disable gtk2 Theme / Icons / Font
@@ -563,7 +571,7 @@ underline_char="-"
 # Example:
 # separator="->":   'Shell-> bash'
 # separator=" =":   'WM = dwm'
-separator=":"
+separator=" =>"
 
 
 # Color Blocks
@@ -694,7 +702,7 @@ disk_display="off"
 # Values:   'ascii', 'caca', 'chafa', 'jp2a', 'iterm2', 'off',
 #           'pot', 'termpix', 'pixterm', 'tycat', 'w3m', 'kitty'
 # Flag:     --backend
-image_backend="ascii"
+image_backend="kitty"
 
 # Image Source
 #
@@ -708,7 +716,7 @@ image_backend="ascii"
 # NOTE: 'auto' will pick the best image source for whatever image backend is used.
 #       In ascii mode, distro ascii art will be used and in an image mode, your
 #       wallpaper will be used.
-image_source="auto"
+image_source="/home/insti/.config/neofetch/image.png"
 
 
 # Ascii Options
@@ -826,7 +834,7 @@ crop_offset="center"
 # Values:  'auto', '00px', '00%', 'none'
 # Flags:   --image_size
 #          --size
-image_size="auto"
+image_size="480"
 
 # Gap between image and text
 #
