--- a/_shared/.config/picom.conf
+++ b/_shared/.config/picom.conf
@@ -1,11 +1,11 @@
-## Shadow
+## shadow
 shadow = true;
 shadow-radius = 12;
 shadow-offset-x = -17;
 shadow-offset-y = -7;
 shadow-opacity = 0.5;
 
-## fading
+## fade
 fading = true;
 fade-delta = 0.25;
 fade-in-step = 0.02;
@@ -16,7 +16,6 @@ fade-exclude = [
 ## opacity
 active-opacity = 1.0;
 frame-opacity = 0.7;
-opacity-rule = [ "80:class_g = 'code-oss'" , "80:class_g = 'subl3'"];
 
 ## other
 backend = "glx";
@@ -24,13 +23,9 @@ mark-wmwin-focused = true;
 mark-ovredir-focused = true;
 detect-rounded-corners = true;
 detect-client-opacity = true;
-refresh-rate = 0;
+refresh-rate = 144;
 vsync = false;
 dbe = false;
-focus-exclude = [ "class_g = 'Cairo-clock'" ,
-	"class_g = 'CoverGloobus'",
-	"class_g = 'Tilda'"
-];
 detect-transient = true;
 detect-client-leader = true;
 invert-color-include = [ ];
