--- a/lavender/.config/picom.conf
+++ b/lavender/.config/picom.conf
@@ -1,17 +1,17 @@
-## Shadow
+## shadow
 shadow = true;
-shadow-radius = 12;
-shadow-offset-x = -12;
-shadow-offset-y = -12;
+shadow-radius = 15;
+shadow-offset-x = -11;
+shadow-offset-y = -16;
 shadow-opacity = 0.5;
+shadow-exclude = ["name = 'LINE'", "class_g = 'LINE.exe'"]
 
-## fading
+## fade
 fading = true;
 fade-delta = 0.25;
 fade-in-step = 0.02;
 fade-out-step = 0.02;
-fade-exclude = [
-];
+fade-exclude = ["name = 'LINE'", "class_g = 'LINE.exe'"];
 
 ## opacity
 active-opacity = 1.0;
@@ -21,9 +21,10 @@ frame-opacity = 0.7;
 backend = "glx";
 mark-wmwin-focused = true;
 mark-ovredir-focused = true;
+unredir-if-possible = false;
 detect-rounded-corners = true;
 detect-client-opacity = true;
-refresh-rate = 144;
+refresh-rate = 0;
 vsync = false;
 dbe = false;
 detect-transient = true;
@@ -33,16 +34,19 @@ glx-copy-from-front = false;
 use-damage = true;
 wintypes:
 {
-	dock = { shadow = true };
-	dnd = { shadow = false };
-  tooltip = { fade = true; shadow = true; opacity = 0.75; focus = true; };
+    dock = { shadow = true };
+    dnd = { shadow = false };
+    tooltip = { fade = true; shadow = true; opacity = 0.75; focus = true; };
 };
 
-## blur
+## blurs
 blur-background = true;
 blur-background-frame = false;
 blur-background-fixed = false;
 blur-kern = "3x3box";
 blur-method = "dual_kawase";
 blur-strength = 10;
-blur-background-exclude = [ "window_type = 'desktop'", "class_g = 'slop'" ];
+blur-background-exclude = [ "window_type = 'desktop'", "class_g = 'slop'", "name = 'LINE'", "class_g = 'LINE.exe'"];
+
+## animations
+transition-length = 100
