updated polybar config

--- a/lavender/.config/polybar/config.ini
+++ b/lavender/.config/polybar/config.ini
@@ -19,9 +19,9 @@
 	font-0 = "Source Han Code JP:size=10;2"
 	font-1 = "Siji:size=12;1"
 
-	; background = #CC002b36
+	; background = #00002b36
 	background = #002b36
-	foreground = #ffffff
+	foreground = #839496
 
 	height = 32
 
@@ -38,13 +38,14 @@
 	; network-traffic is buggy as fk
 	modules-left = sep cpu cpu-temp sep gpu-usage gpu-temp optimus nvidia sep memory sep hdd sep
 	modules-center = 
-	modules-right = sep mullvad sep network-ipinfo network-traffic sep
+	modules-right = sep qbittorrent sep mullvad sep network-ipinfo network-traffic sep
 
 	font-0 = "Source Han Code JP:size=10;2"
 	font-1 = "Siji:size=12;1"
 
+	; background = #00002b36
 	background = #002b36
-	foreground = #ffffff
+	foreground = #839496
 
 	height = 32
 
@@ -79,7 +80,7 @@
 	pin-workspaces = true
 
 	label-focused-underline = #2aa198
-	label-occupied-underline = #ffffff
+	label-occupied-underline = #839496
 	label-focused-background = #2aa198
 
 	label-focused = %name%
@@ -96,8 +97,8 @@
 
 	pin-workspaces = true
 
-	label-focused-overline = #ffffff
-	label-occupied-overline = #ffffff
+	label-focused-overline = #839496
+	label-occupied-overline = #839496
 	label-focused-background = #000000cc
 
 	label-focused = %name%
@@ -114,9 +115,10 @@
 
 	pin-workspaces = false
 
-	label-focused-underline = #ffffff
-	label-occupied-underline = #ffffff
+	label-occupied-underline = #839496
+	label-focused-underline = #2aa198
 	label-focused-background = #2aa198
+	label-focused-foreground = #ffffff
 
 	label-focused = %name%
 	label-occupied = %name%
@@ -130,27 +132,27 @@
 	type = internal/xwindow
 	; label-padding = 1
 	label = %title:0:80:...%
-	label-overline = #ffffff
+	label-overline = #839496
 
 [module/date]
 	type = internal/date
 	date = %Y %m %d%
 	format = <date>
-	format-underline = #ffffff
+	format-underline = #839496
 	format-prefix = " " 
 
 [module/time]
 	type = internal/date
 	date = %H %M %S
 	format = <date>
-	format-underline = #ffffff
+	format-underline = #839496
 	format-prefix = " " 
 
 [module/time-2]
 	type = internal/date
 	date = %H %M %S
 	format = <date>
-	format-overline = #ffffff
+	format-overline = #839496
 	format-prefix = " " 
 
 [module/cpu]
@@ -159,7 +161,7 @@
 
 	format-prefix = 
 	label = " %percentage%%"
-	format-overline = #ffffff
+	format-overline = #839496
 
 [module/cpu-temp]
 	type = internal/temperature
@@ -178,8 +180,8 @@
 	label = " %temperature-c%"
 	label-warn = " %temperature-c%"
 	label-warn-foreground = #f00
-	format-overline = #ffffff
-	format-warn-overline = #ffffff
+	format-overline = #839496
+	format-warn-overline = #839496
 
 [module/gpu-temp]
 	type = internal/temperature
@@ -199,14 +201,14 @@
 	label = " %temperature-c%"
 	label-warn = " %temperature-c%"
 	label-warn-foreground = #f00
-	format-overline = #ffffff
-	format-warn-overline = #ffffff
+	format-overline = #839496
+	format-warn-overline = #839496
 
 [module/gpu-usage]
 	type = custom/script
 	exec = /home/insti/.config/polybar/scripts/system-ati-radeontop.sh
 	interval = 1
-	format-overline = #ffffff
+	format-overline = #839496
 	format = <label>
 	format-prefix =  
 
@@ -214,7 +216,7 @@
 	type = custom/script
 	exec = /home/insti/.config/polybar/scripts/system-nvidia.sh
 	interval = 1
-	format-overline = #ffffff
+	format-overline = #839496
 	format = <label>
 	format-prefix = 
 
@@ -227,7 +229,7 @@
 	format-prefix = 
 
 	label = " %percentage_used%% %gb_used%"
-	format-overline = #ffffff
+	format-overline = #839496
 
 [module/hdd]
 	type = internal/fs
@@ -239,16 +241,16 @@
 	label-mounted =  %percentage_used%% %used%
 	label-unmounted =  unmounted
 
-	format-mounted-overline = #ffffff
-	format-unmounted-overline = #ffffff
+	format-mounted-overline = #839496
+	format-unmounted-overline = #839496
 
 
 [module/pulseaudio]
 	type = internal/pulseaudio
 
 	format-volume = <ramp-volume> <label-volume>
-	format-volume-underline = #ffffff
-	format-muted-underline = #ffffff
+	format-volume-underline = #839496
+	format-muted-underline = #839496
 
 	; Sink to be used, if it exists (find using `pacmd list-sinks`, name field)
 	; If not, uses default sink
@@ -276,9 +278,9 @@
 [module/pulseaudio-control]
 	type = custom/script
 	tail = true
-	format-underline = #ffffff
+	format-underline = #839496
 	# label-padding = 2
-	label-underline = #ffffff
+	label-underline = #839496
 
 	# Icons mixed from Font Awesome 5 and Material Icons
 	# You can copy-paste your options for each possible action, which is more
@@ -297,7 +299,7 @@
 	tail = true
 	click-left = ~/.config/polybar/scripts/player-mpris-tail.py play-pause &
 	click-right = ~/.config/polybar/scripts/player-mpris-tail.py next &
-	label-underline = #ffffff
+	label-underline = #839496
 
 [module/player-mpris-simple]
 	type = custom/script
@@ -306,27 +308,27 @@
 	; click-middle = playerctl previous &
 	click-right = playerctl next &
 	click-left = playerctl play-pause &
-	label-underline = #ffffff
+	label-underline = #839496
 
 [module/noisetorch]
 	type = custom/script
 	exec = ~/.config/polybar/scripts/isrunning-noisetorch.sh
 	tail = true
 	click-left = noisetorch
-	label-underline = #ffffff
+	label-underline = #839496
 
 [module/mullvad]
 	type = custom/script
 	exec = ~/.config/polybar/scripts/mullvad-status.sh
 	interval = 1
-	label-overline = #ffffff
+	label-overline = #839496
 
 [module/weather]
 	type = custom/script
 	exec = ~/.config/polybar/scripts/openweathermap-simple.sh
 	interval = 60
 	label-font = 3
-	label-underline = #ffffff
+	label-underline = #839496
 
 [module/fcitx]
 	type = custom/script
@@ -334,32 +336,32 @@
 	tail = true
 	interval = 0
 	format-prefix = " "
-	format-underline = #ffffff
+	format-underline = #839496
 
 [module/qbittorrent]
 	type = custom/script  
 	exec = ~/.config/polybar/scripts/qbittorrent
 	interval = 0.1
 	display_without_active = True
-	label-overline = #ffffff
+	label-overline = #839496
 
 [module/network-traffic]
 	type = custom/script
 	exec = ~/.config/polybar/scripts/network-traffic.sh
 	tail = true
-	label-overline = #ffffff
+	label-overline = #839496
 
 ; [module/network-ipinfo.io]
 ; 	type = custom/script
 ; 	exec = ~/.config/polybar/scripts/network-ipinfo.io.sh
 ; 	interval = 60
-; 	label-overline = #ffffff
+; 	label-overline = #839496
 
 [module/network-ipinfo]
 	type = custom/script
 	exec = ~/.config/polybar/scripts/network-ipinfo.io.sh
 	interval = 60
-	label-overline = #ffffff
+	label-overline = #839496
 
 [module/pacman]
 	type = custom/script
@@ -379,7 +381,7 @@
 	type = custom/script
 	exec = "~/.config/polybar/scripts/kdeconnect.sh -d"
 	tail = true
-	label-overline = #ffffff
+	label-overline = #839496
 
 [module/battery]
 	type = internal/battery
@@ -405,27 +407,27 @@
 
 	label-full =  %percentage%%
 
-	label-charging-underline = #ffffff
-	format-discharging-underline = #ffffff
-	label-full-underline = #ffffff
+	label-charging-underline = #839496
+	format-discharging-underline = #839496
+	label-full-underline = #839496
 
 [module/backlight]
 	type = internal/backlight
 	card = amdgpu_bl0
-	use-actual-brightness = false
+	use-actual-brightness = true
 	format = <label>
 	label =  %percentage%%
-	label-underline = #ffffff
+	label-underline = #839496
 
 [module/networkmanager]
 	type = custom/script
 	exec = "~/.config/polybar/scripts/networkmanager.sh"
 	tail = true
-	label-overline = #ffffff
+	label-overline = #839496
 
 [module/optimus]
 	type = custom/script
 	exec = ~/.config/polybar/scripts/optimus.sh
 	interval = 1200
 	click-right = ~/.config/polybar/scripts/optimus.sh --switch
-	label-overline = #ffffff
+	label-overline = #839496
