--- a/lavender/.config/neofetch/config.conf
+++ b/lavender/.config/neofetch/config.conf
@@ -5,6 +5,8 @@ print_info() {
     info underline
 
     prin "Hardware"
+
+    prin "" "Lenovo Legion 5 15ARH05"
     prin "﬙" "AMD Ryzen 7 4800H"
     #info "﬙" cpu
     # info "﴾" gpu
@@ -26,9 +28,11 @@ print_info() {
     # info "WM Theme" wm_theme
     info "" theme
     info "" icons
-    # info "Terminal Font" term_font   
-    info "" font
+    # info "Terminal Font" term_font
+    prin "" "FiraCode Nerd Font Mono"   
+    # info "" font
     info "" locale
+    # prin "" "en_GB.UTF-8, ja_JP.UTF-8"
     info "" uptime
     
     # info "DE" de
@@ -703,7 +707,7 @@ disk_display="off"
 # Values:   'ascii', 'caca', 'chafa', 'jp2a', 'iterm2', 'off',
 #           'pot', 'termpix', 'pixterm', 'tycat', 'w3m', 'kitty'
 # Flag:     --backend
-image_backend="kitty"
+image_backend="ascii"
 
 # Image Source
 #
@@ -717,7 +721,8 @@ image_backend="kitty"
 # NOTE: 'auto' will pick the best image source for whatever image backend is used.
 #       In ascii mode, distro ascii art will be used and in an image mode, your
 #       wallpaper will be used.
-image_source="/home/insti/.config/neofetch/image.png"
+# image_source="/home/insti/.config/neofetch/image.png"
+image_source="/home/insti/.config/neofetch/sussy.ascii"
 
 
 # Ascii Options
