--- a/lavender/.config/polybar/config.ini
+++ b/lavender/.config/polybar/config.ini
@@ -12,16 +12,20 @@
 
 	wm-restack = bspwm
 
-	modules-left = sep me sep pacman sep bspwm-all sep
+	modules-left = pacman sep bspwm
 	modules-center = 
-	modules-right = sep player-mpris-tail sep pulseaudio-control sep backlight sep battery sep weather sep date sep time sep
+	modules-right = player-mpris-tail sep pulseaudio-control sep backlight sep battery sep weather sep date sep time
 
 	font-0 = "Source Han Code JP:size=10;2"
 	font-1 = "Siji:size=12;1"
 
-	; background = #00002b36
-	background = #002b36
+	background = #00002b36
+	; background = #002b36
 	foreground = #839496
+
+	offset-y = 8
+	padding-left = 1
+	padding-right = 1
 
 	height = 32
 
@@ -36,16 +40,21 @@
 	wm-restack = bspwm
 
 	; network-traffic is buggy as fk
-	modules-left = sep cpu cpu-temp sep gpu-usage gpu-temp optimus nvidia sep memory sep hdd sep
+	modules-left = cpu cpu-freq cpu-temp sep gpu-usage gpu-temp optimus nvidia sep memory sep hdd
 	modules-center = 
-	modules-right = sep qbittorrent sep mullvad sep network-ipinfo network-traffic sep
+	modules-right = qbittorrent sep mullvad sep network-ipinfo network-traffic
 
 	font-0 = "Source Han Code JP:size=10;2"
 	font-1 = "Siji:size=12;1"
 
-	; background = #00002b36
-	background = #002b36
+	background = #00002b36
+	; background = #002b36
 	foreground = #839496
+
+	offset-y = 8
+	offset-x = -2
+	padding-left = 1
+	; padding-right = 1
 
 	height = 32
 
@@ -54,6 +63,8 @@
 	fixed-center = true
 
 	tray-position = right
+	tray-padding = 2
+	; tray-background = #002b36
 
 
 ;  _____       _     _         
@@ -70,55 +81,27 @@
 	type = custom/text
 	content = "%{F#2aa198}  %{F-}"
 	format = <content>
-	content-underline = #2aa198
+	content-background = #002b36
+	content-padding = 2px
 	click-left = kill -s USR1 $(pidof deadd-notification-center)
 
-[module/bspwm-top]
-	type = internal/bspwm
-	format = <label-state>
-
-	pin-workspaces = true
-
-	label-focused-underline = #2aa198
-	label-occupied-underline = #839496
-	label-focused-background = #2aa198
-
-	label-focused = %name%
-	label-occupied = %name%
-	label-empty = %name%
-
-	label-focused-padding = 1
-	label-occupied-padding = 1
-	label-empty-padding = 1
-
-[module/bspwm-bottom]
-	type = internal/bspwm
-	format = <label-state>
-
-	pin-workspaces = true
-
-	label-focused-overline = #839496
-	label-occupied-overline = #839496
-	label-focused-background = #000000cc
-
-	label-focused = %name%
-	label-occupied = %name%
-	label-empty = %name%
-
-	label-focused-padding = 1
-	label-occupied-padding = 1
-	label-empty-padding = 1
-
-[module/bspwm-all]
+[module/bspwm]
 	type = internal/bspwm
 	format = <label-state>
 
 	pin-workspaces = false
 
-	label-occupied-underline = #839496
+	label-occupied-underline = #002b36
+	label-occupied-background = #002b36
+	label-occupied-foreground = #2aa198
+
 	label-focused-underline = #2aa198
 	label-focused-background = #2aa198
 	label-focused-foreground = #ffffff
+
+	label-empty-underline = #002b36
+	label-empty-background = #002b36
+	label-empty-foreground = #839496
 
 	label-focused = %name%
 	label-occupied = %name%
@@ -131,37 +114,48 @@
 [module/xwindow]
 	type = internal/xwindow
 	; label-padding = 1
-	label = %title:0:80:...%
-	label-overline = #839496
+	label = %title:0:20:...%
+	format-background = #002b36
+	format-padding = 1
 
 [module/date]
 	type = internal/date
 	date = %Y %m %d%
 	format = <date>
-	format-underline = #839496
 	format-prefix = " " 
+	format-background = #002b36
+	format-padding = 1
 
 [module/time]
 	type = internal/date
 	date = %H %M %S
 	format = <date>
-	format-underline = #839496
+	format-background = #002b36
+	format-padding = 1
 	format-prefix = " " 
 
 [module/time-2]
 	type = internal/date
 	date = %H %M %S
 	format = <date>
-	format-overline = #839496
+	format-background = #002b36
+	format-padding = 1
 	format-prefix = " " 
 
 [module/cpu]
 	type = internal/cpu
 	interval = 1
 
-	format-prefix = 
+	format-prefix = " "
 	label = " %percentage%%"
-	format-overline = #839496
+	format-background = #002b36
+	; format-padding = 1
+
+[module/cpu-freq]
+	type = custom/script
+	exec = ~/.config/polybar/scripts/system-cpu-frequency.sh
+	interval = 1
+	format-background = #002b36
 
 [module/cpu-temp]
 	type = internal/temperature
@@ -177,10 +171,10 @@
 	format-warn = <label-warn>
 
 	units = true
-	label = " %temperature-c%"
-	label-warn = " %temperature-c%"
+	label = " %temperature-c% "
+	label-warn = " %temperature-c% "
 	label-warn-foreground = #f00
-	format-overline = #839496
+	format-background = #002b36
 	format-warn-overline = #839496
 
 [module/gpu-temp]
@@ -201,23 +195,23 @@
 	label = " %temperature-c%"
 	label-warn = " %temperature-c%"
 	label-warn-foreground = #f00
-	format-overline = #839496
+	format-background = #002b36
 	format-warn-overline = #839496
 
 [module/gpu-usage]
 	type = custom/script
 	exec = /home/insti/.config/polybar/scripts/system-ati-radeontop.sh
 	interval = 1
-	format-overline = #839496
+	format-background = #002b36
 	format = <label>
-	format-prefix =  
+	format-prefix = "  "
 
 [module/nvidia]
 	type = custom/script
 	exec = /home/insti/.config/polybar/scripts/system-nvidia.sh
 	interval = 1
-	format-overline = #839496
-	format = <label>
+	format-background = #002b36
+	format = "<label> "
 	format-prefix = 
 
 [module/memory]
@@ -229,7 +223,8 @@
 	format-prefix = 
 
 	label = " %percentage_used%% %gb_used%"
-	format-overline = #839496
+	format-background = #002b36
+	format-padding = 1
 
 [module/hdd]
 	type = internal/fs
@@ -241,8 +236,10 @@
 	label-mounted =  %percentage_used%% %used%
 	label-unmounted =  unmounted
 
-	format-mounted-overline = #839496
-	format-unmounted-overline = #839496
+	format-mounted-background = #002b36
+	format-mounted-padding = 1
+	format-unmounted-background = #002b36
+	format-unmounted-padding = 1
 
 
 [module/pulseaudio]
@@ -278,9 +275,9 @@
 [module/pulseaudio-control]
 	type = custom/script
 	tail = true
-	format-underline = #839496
+	format-background = #002b36
+	format-padding = 1
 	# label-padding = 2
-	label-underline = #839496
 
 	# Icons mixed from Font Awesome 5 and Material Icons
 	# You can copy-paste your options for each possible action, which is more
@@ -299,7 +296,8 @@
 	tail = true
 	click-left = ~/.config/polybar/scripts/player-mpris-tail.py play-pause &
 	click-right = ~/.config/polybar/scripts/player-mpris-tail.py next &
-	label-underline = #839496
+	format-background = #002b36
+	format-padding = 1
 
 [module/player-mpris-simple]
 	type = custom/script
@@ -308,27 +306,31 @@
 	; click-middle = playerctl previous &
 	click-right = playerctl next &
 	click-left = playerctl play-pause &
-	label-underline = #839496
+	format-background = #002b36
+	format-padding = 1
 
 [module/noisetorch]
 	type = custom/script
 	exec = ~/.config/polybar/scripts/isrunning-noisetorch.sh
 	tail = true
 	click-left = noisetorch
-	label-underline = #839496
+	format-background = #002b36
+	format-padding = 1
 
 [module/mullvad]
 	type = custom/script
 	exec = ~/.config/polybar/scripts/mullvad-status.sh
 	interval = 1
-	label-overline = #839496
+	format-background = #002b36
+	format-padding = 1
 
 [module/weather]
 	type = custom/script
 	exec = ~/.config/polybar/scripts/openweathermap-simple.sh
 	interval = 60
 	label-font = 3
-	label-underline = #839496
+	format-background = #002b36
+	format-padding = 1
 
 [module/fcitx]
 	type = custom/script
@@ -336,20 +338,22 @@
 	tail = true
 	interval = 0
 	format-prefix = " "
-	format-underline = #839496
+	format-background = #002b36
+	format-padding = 1
 
 [module/qbittorrent]
 	type = custom/script  
 	exec = ~/.config/polybar/scripts/qbittorrent
 	interval = 0.1
 	display_without_active = True
-	label-overline = #839496
+	format-background = #002b36
+	format-padding = 1
 
 [module/network-traffic]
 	type = custom/script
 	exec = ~/.config/polybar/scripts/network-traffic.sh
 	tail = true
-	label-overline = #839496
+	format-background = #002b36
 
 ; [module/network-ipinfo.io]
 ; 	type = custom/script
@@ -361,13 +365,15 @@
 	type = custom/script
 	exec = ~/.config/polybar/scripts/network-ipinfo.io.sh
 	interval = 60
-	label-overline = #839496
+	format-background = #002b36
 
 [module/pacman]
 	type = custom/script
 	exec = ~/.config/polybar/scripts/updates-pacman-aurhelper.sh
 	interval = 600
-	label-underline = #00BFFF
+	label-foreground = #2aa198
+	label-background = #002b36
+	label-padding = 2px
 
 [module/notificatons]
 	type = custom/script
@@ -401,15 +407,24 @@
 	ramp-capacity-3 = 
 	ramp-capacity-4 = 
 
-	label-charging =  %percentage%%  %time%
+	label-charging =  %percentage%% %consumption% W  %time%
 
-	label-discharging = %percentage%%  %time%
+	label-discharging = %percentage%% %consumption% W  %time%
 
 	label-full =  %percentage%%
 
-	label-charging-underline = #839496
-	format-discharging-underline = #839496
-	label-full-underline = #839496
+	; label-charging-underline = #839496
+	; format-discharging-underline = #839496
+	; label-full-underline = #839496
+
+	format-discharging-background = #002b36
+	format-discharging-padding = 1
+	format-charging-background = #002b36
+	format-charging-padding = 1
+	format-full-background = #002b36
+	format-full-padding = 1
+
+	poll-interval = 5
 
 [module/backlight]
 	type = internal/backlight
@@ -417,7 +432,8 @@
 	use-actual-brightness = true
 	format = <label>
 	label =  %percentage%%
-	label-underline = #839496
+	format-background = #002b36
+	format-padding = 1
 
 [module/networkmanager]
 	type = custom/script
@@ -430,4 +446,4 @@
 	exec = ~/.config/polybar/scripts/optimus.sh
 	interval = 1200
 	click-right = ~/.config/polybar/scripts/optimus.sh --switch
-	label-overline = #839496
+	label-background = #002b36
