--- a/lavender/.config/picom.conf
+++ b/lavender/.config/picom.conf
@@ -4,14 +4,14 @@ shadow-radius = 15;
 shadow-offset-x = -11;
 shadow-offset-y = -16;
 shadow-opacity = 0.5;
-shadow-exclude = ["name = 'LINE'", "class_g = 'LINE.exe'"]
+shadow-exclude = ["name = 'cpt_frame_window'" , "name = 'LINE'", "class_g = 'LINE.exe'", "class_g = 'Polybar'", "class_g = 'Dunst'"]
 
 ## fade
 fading = true;
 fade-delta = 0.25;
 fade-in-step = 0.02;
 fade-out-step = 0.02;
-fade-exclude = ["name = 'LINE'", "class_g = 'LINE.exe'"];
+fade-exclude = ["name = 'LINE'", "class_g = 'LINE.exe'", "class_g = 'Polybar'", "class_g = 'Dunst'"];
 
 ## opacity
 active-opacity = 1.0;
@@ -40,13 +40,13 @@ wintypes:
 };
 
 ## blurs
-blur-background = true;
+blur-background = false;
 blur-background-frame = false;
 blur-background-fixed = false;
 blur-kern = "3x3box";
 blur-method = "dual_kawase";
 blur-strength = 10;
-blur-background-exclude = [ "window_type = 'desktop'", "class_g = 'slop'", "name = 'LINE'", "class_g = 'LINE.exe'"];
+blur-background-exclude = [ "window_type = 'desktop'", "class_g = 'slop'", "name = 'LINE'", "class_g = 'LINE.exe'", "class_g = 'Polybar'", "class_g = 'Dunst'"];
 
 ## animations
 transition-length = 100
