--- a/vfio/Boot Entries/arch-vfio.conf
+++ b/vfio/Boot Entries/arch-vfio.conf
@@ -1,8 +1,5 @@
-## This is just an example config file.
-## Please edit the paths and kernel parameters according to your system.
-
 title   Arch Linux
 linux   /vmlinuz-linux-vfio
 initrd  /amd-ucode.img
 initrd  /initramfs-linux-vfio.img
-options root=PARTUUID=4d20a0e7-98b0-4fbb-ac47-c6bc2d8b6b7e rootfstype=f2fs add_efi_memmap initcall_blacklist=acpi_cpufreq_init amd_pstate.shared_mem=1 iommu=pt pcie_acs_override=downstream,multifunction vfio-pci.ids=10de:2482,10de:228b,1912:0014 noibrs noibpb nopti nospectre_v2 nospectre_v1 l1tf=off nospec_store_bypass_disable no_stf_barrier mds=off tsx=on tsx_async_abort=off mitigations=off
+options root=PARTUUID=4d20a0e7-98b0-4fbb-ac47-c6bc2d8b6b7e rootfstype=f2fs rw add_efi_memmap initcall_blacklist=acpi_cpufreq_init amd_pstate.shared_mem=1 iommu=pt pcie_acs_override=downstream,multifunction vfio-pci.ids=10de:2482,10de:228b,1b21:1242 noibrs noibpb nopti nospectre_v2 nospectre_v1 l1tf=off nospec_store_bypass_disable no_stf_barrier mds=off tsx=on tsx_async_abort=off mitigations=off amd_pstate=active
