update rainlily (final)

--- a/rainlily/.config/neofetch/config.conf
+++ b/rainlily/.config/neofetch/config.conf
@@ -6,33 +6,29 @@ print_info() {
 
     prin "Hardware"
 
-    prin "﬙" "AMD Ryzen 7 5800X"
-    #info "﬙" cpu
-    # info "﴾" gpu
-    prin "﴾" "AMD Radeon RX 5500 XT"
-    prin "﴾" "NVIDIA GeForce RTX 3070 Ti"
-    info "" memory
-    info "" resolution
+    prin "" "AMD Ryzen 7 5800X"
+    prin "" "AMD Radeon RX 5500 XT"
+    prin "" "NVIDIA GeForce RTX 3070 Ti"
+    info "" memory
+    info "󰍹" resolution
 
     prin ""
     
     prin "Software"
-    info "" distro
-    info "" kernel
+    info "󰣇" distro
+    info "" kernel
     info "" shell
-    info "" term
-    # info "Host" model
-    info "" packages
-    info "" wm
-    # info "WM Theme" wm_theme
-    info "" theme
-    info "" icons
-    # info "Terminal Font" term_font
-    prin "" "FiraCode Nerd Font Mono"   
-    # info "" font
-    info "" locale
-    # prin "" "en_GB.UTF-8, ja_JP.UTF-8"
+    info "" term
+    info "󰏗" packages
+    info "󰖲" wm
+    info "󰏘" theme
+    info "" icons
+    prin "" "FiraCode Nerd Font Mono"
+    prin "" "en_GB.UTF-8, ja_JP.UTF-8"
     info "" uptime
+
+    # info "Terminal Font" term_font
+    # info "" locale
     
     # info "DE" de
     # info "GPU Driver" gpu_driver  # Linux/macOS only
