--- a/rainlily/.config/polybar/config.ini
+++ b/rainlily/.config/polybar/config.ini
@@ -8,7 +8,7 @@
 
 [bar/main]
 	bottom = false
-	monitor = DisplayPort-0
+	monitor = HDMI-A-0
 
 	wm-restack = bspwm
 
@@ -35,12 +35,12 @@
 
 [bar/sub]
 	bottom = true
-	monitor = DisplayPort-0
+	monitor = HDMI-A-0
 
 	wm-restack = bspwm
 
 	; network-traffic is buggy as fk
-	modules-left = cpu cpu-freq cpu-temp sep gpu-usage gpu-temp sep memory sep hdd hdd2 sep
+	modules-left = cpu cpu-freq cpu-temp sep gpu-usage gpu-temp sep memory sep hdd hdd2 sep power-usage sep
 	modules-center = bspwm-single
 	modules-right = sep mullvad sep network-ipinfo network-traffic
 
@@ -97,12 +97,12 @@
 
 [bar/side-main]
 	bottom = false
-	monitor = DisplayPort-1
+	monitor = DisplayPort-2
 
 	wm-restack = bspwm
 
 	; network-traffic is buggy as fk
-	modules-left = qbittorrent
+	modules-left = bspwm-single sep
 	modules-center = 
 	modules-right = sep date sep time
 
@@ -126,14 +126,14 @@
 
 [bar/side-sub]
 	bottom = true
-	monitor = DisplayPort-1
+	monitor = DisplayPort-2
 
 	wm-restack = bspwm
 
 	; network-traffic is buggy as fk
-	modules-left = 
-	modules-center = bspwm-single
-	modules-right = 
+	modules-left = cpu cpu-freq cpu-temp sep gpu-usage gpu-temp sep memory sep hdd hdd2 sep
+	modules-center = 
+	modules-right = sep power-usage
 
 	font-0 = "Source Han Code JP:size=10;2"
 	font-1 = "Siji:size=12;1"
@@ -145,7 +145,7 @@
 	offset-y = 8
 	# offset-x = -2
 	padding-left = 1
-	; padding-right = 1
+	padding-right = 1
 
 	height = 32
 
@@ -257,7 +257,7 @@
 
 [module/cpu]
 	type = internal/cpu
-	interval = 1
+	interval = 3
 
 	format-prefix = " "
 	label = " %percentage%%"
@@ -267,12 +267,12 @@
 [module/cpu-freq]
 	type = custom/script
 	exec = ~/.config/polybar/scripts/system-cpu-frequency.sh
-	interval = 1
+	interval = 3
 	format-background = #002b36
 
 [module/cpu-temp]
 	type = internal/temperature
-	interval = 1
+	interval = 3
 
 	; hwmon-path = /sys/devices/pci0000:00/0000:00:18.3/hwmon/hwmon2/temp2_input
 	hwmon-path = ${env:HWMON_CPU_PATH}
@@ -292,7 +292,7 @@
 
 [module/gpu-temp]
 	type = internal/temperature
-	interval = 1
+	interval = 3
 
 	; hwmon-path = /sys/devices/pci0000:00/0000:00:03.1/0000:09:00.0/0000:0a:00.0/0000:0b:00.0/hwmon/hwmon4/temp1_input
 	hwmon-path = ${env:HWMON_GPU_PATH}
@@ -314,7 +314,7 @@
 [module/gpu-usage]
 	type = custom/script
 	exec = /home/insti/.config/polybar/scripts/system-ati-radeontop.sh
-	interval = 1
+	interval = 3
 	format-background = #002b36
 	format = <label>
 	format-prefix = "  "
@@ -410,10 +410,10 @@
 	# You can copy-paste your options for each possible action, which is more
 	# trouble-free but repetitive, or apply only the relevant ones (for example
 	# --sink-blacklist is only needed for next-sink).
-	exec = pulseaudio-control --icons-volume "," --icon-muted "" --node-nicknames-from "device.description" --node-nickname "alsa_output.pci-0000_06_00.6.analog-stereo: " --node-nickname "alsa_output.pci-0000_0e_00.4.analog-stereo: " --node-nickname "alsa_output.usb-Apple__Inc._USB-C_to_3.5mm_Headphone_Jack_Adapter_DWH211601ZBJKLTA5-00.analog-stereo: " --node-nickname "alsa_output.usb-Yoyodyne_Consulting_ODAC-revB-01.analog-stereo: " listen
+	exec = pulseaudio-control --icons-volume "," --icon-muted "" --node-nicknames-from "device.description" --node-nickname "alsa_output.pci-0000_0d_00.4.analog-stereo: " --node-nickname "alsa_output.pci-0000_0e_00.4.analog-stereo: " --node-nickname "alsa_output.usb-Apple__Inc._USB-C_to_3.5mm_Headphone_Jack_Adapter_DWH0263000YJKLTA9-00.analog-stereo: " --node-nickname "alsa_output.usb-Yoyodyne_Consulting_ODAC-revB-01.analog-stereo: " listen
 	click-right = exec pavucontrol &
 	click-middle = pulseaudio-control togmute
-	click-left = pulseaudio-control --node-blacklist "alsa_output.pci-0000_09_00.1.hdmi-stereo-extra2,alsa_output.usb-Generic_Blue_Microphones_LT_200819091831D70F0407_111000-00.analog-stereo,alsa_output.pci-0000_0b_00.1.hdmi-stereo-extra2,nui_mic_denoised_out,nui_mic_raw_in,echoCancel_sink,pulseeffects_sink" next-node
+	click-left = pulseaudio-control --node-blacklist "alsa_output.pci-0000_09_00.1.hdmi-stereo-extra2,alsa_output.usb-Generic_Blue_Microphones_LT_200819091831D70F0407_111000-00.analog-stereo,alsa_output.pci-0000_0b_00.1.hdmi-stereo-extra2,nui_mic_denoised_out,nui_mic_raw_in,echoCancel_sink,pulseeffects_sink, alsa_output.pci-0000_0b_00.1.hdmi-stereo" next-node
 	scroll-up = pulseaudio-control --volume-max 100 up
 	scroll-down = pulseaudio-control --volume-max 100 down
 
@@ -574,3 +574,9 @@
 	interval = 1200
 	click-right = ~/.config/polybar/scripts/optimus.sh --switch
 	label-background = #002b36
+
+[module/power-usage]
+	type = custom/script
+	exec = ~/.config/polybar/scripts/power-usage.sh
+	interval = 3
+	format-background = #002b36
