update rainlily to hyprland

--- a/rainlily/.config/kitty/kitty.conf
+++ b/rainlily/.config/kitty/kitty.conf
@@ -13,6 +13,12 @@ url_style curly
 # special
 background_opacity 1
 
+map ctrl+shift+; kitten unicode_input
+
+
+
+
+
 # Solarized Dark
 cursor 			#93a1a1
 url_color 		#0087BD
