--- a/rainlily/.config/neofetch/config.conf
+++ b/rainlily/.config/neofetch/config.conf
@@ -6,6 +6,7 @@ print_info() {
 
     prin "Hardware"
 
+    prin "󰟀" "ROG STRIX X470-F"
     prin "" "AMD Ryzen 7 5800X"
     prin "" "AMD Radeon RX 5500 XT"
     prin "" "NVIDIA GeForce RTX 3070 Ti"
@@ -20,11 +21,11 @@ print_info() {
     info "" shell
     info "" term
     info "󰏗" packages
-    info "󰖲" wm
+    info "󰖲" de
     info "󰏘" theme
     info "" icons
     prin "" "FiraCode Nerd Font Mono"
-    prin "" "en_GB.UTF-8, ja_JP.UTF-8"
+    prin "" "en_GB, ja_JP, bn_BD"
     info "" uptime
 
     # info "Terminal Font" term_font
