--- a/vfio/Boot Entries/arch-vfio.conf
+++ b/vfio/Boot Entries/arch-vfio.conf
@@ -1,5 +1,5 @@
-title   Arch Linux
+title   Arch Linux VFIO
 linux   /vmlinuz-linux-vfio
 initrd  /amd-ucode.img
 initrd  /initramfs-linux-vfio.img
-options root=PARTUUID=4d20a0e7-98b0-4fbb-ac47-c6bc2d8b6b7e rootfstype=f2fs rw add_efi_memmap initcall_blacklist=acpi_cpufreq_init amd_pstate.shared_mem=1 iommu=pt pcie_acs_override=downstream,multifunction vfio-pci.ids=10de:2482,10de:228b,1b21:1242 noibrs noibpb nopti nospectre_v2 nospectre_v1 l1tf=off nospec_store_bypass_disable no_stf_barrier mds=off tsx=on tsx_async_abort=off mitigations=off amd_pstate=active
+options cryptdevice=PARTUUID=71da588e-1191-4145-b76f-c41834651cea:root root=/dev/mapper/root zswap.enabled=0 rw rootfstype=xfs add_efi_memmap initcall_blacklist=acpi_cpufreq_init amd_pstate.shared_mem=1 iommu=pt pcie_acs_override=downstream,multifunction vfio-pci.ids=10de:2482,10de:228b,1b21:1242 noibrs noibpb nopti nospectre_v2 nospectre_v1 l1tf=off nospec_store_bypass_disable no_stf_barrier mds=off tsx=on tsx_async_abort=off mitigations=off amd_pstate=active
