--- a/rainlily/.config/hypr/hyprland.conf
+++ b/rainlily/.config/hypr/hyprland.conf
@@ -40,7 +40,8 @@ exec-once = swaync
 exec-once = nm-applet
 exec-once = fcitx5
 exec-once = blueman-applet
-exec-once = pcmanfm --daemon-mode
+exec-once = thunar --daemon
+exec-once = openrgb -p /home/insti/.config/OpenRGB/config.orp
 
 exec-once = libinput-gestures-setup start
 exec-once = tp-auto-kbbl -b 1 -t 10
@@ -302,8 +303,9 @@ bindm = $mainMod, mouse:273, resizewindow
 #Other
 bind = $mainMod, L, exec, hyprlock
 bind = $mainMod, C, exec, hyprpicker -ar
-bind = $mainMod, X, exec, grim -g "$(slurp)"
-bind = $mainMod, Z, exec, grim
+bind = $mainMod, X, exec, screenshot.sh -S
+bind = $mainMod, Z, exec, screenshot.sh -F
+bind = $mainMod, V, exec, screenshot.sh -W
 
 # Laptop Stuff
 bindl = , switch:on:Lid Switch, exec, hyprlock
@@ -321,11 +323,9 @@ bind = , XF86Keyboard, exec,
 bind = , XF86Favorites, exec, 
 
 # Mouse Stuff
-# bind = , XF86Launch4, exec, 
-# bind = , XF86Launch5, exec, 
-# bind = , XF86Launch6, exec, 
-bind = , XF86Launch7, exec, playerctl play-pause
-bind = , XF86Launch8, exec, playerctl next 
+bind = , XF86Launch5, exec, playerctl play-pause    #F14
+bind = , XF86Launch6, exec, playerctl next          #F15
+bind = , XF86Launch7, exec,                         #F16
 
 ##############################
 ### WINDOWS AND WORKSPACES ###
@@ -344,6 +344,7 @@ windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 windowrulev2 = float,class:^(org.fcitx.fcitx5-config-qt)$
 windowrulev2 = float,class:^(org.pulseaudio.pavucontrol)$
 windowrulev2 = float,class:^(blueman-manager)$
+windowrulev2 = float,title:^(File Operation Progress)$
 
 # windowrulev2 = idleinhibit fullscreen, class:^(*)$
 windowrulev2 = idleinhibit fullscreen, fullscreen:1
