--- a/waterlily/.config/hypr/hyprland.conf
+++ b/waterlily/.config/hypr/hyprland.conf
@@ -3,16 +3,17 @@
 # Source other configs
 # source = ~/.config/hypr/myColors.conf
 
+# Change monitors and workspace rules when switching computers!
 
 ################
 ### MONITORS ###
 ################
 
 # https://wiki.hyprland.org/Configuring/Monitors/
-monitor=eDP-1, 1920x1080@60, auto, 1.2
+monitor=eDP-1, 1920x1080@60, auto, 1.25
 monitor=desc:LG Electronics LG ULTRAWIDE 0x0007A4F0, 2560x1080@100, auto, 1
+monitor=desc:LG Electronics LG TV SSCR2 0x01010101, 3840x2160@60, auto, 2
 monitor=, preferred, auto, 1
-monitor=desc:HEADLESS-2,1280x800@60,auto,1
 
 xwayland {
     force_zero_scaling = true
@@ -27,7 +28,8 @@ xwayland {
 
 $terminal = kitty
 $fileManager = pcmanfm
-$menu = killall wofi || wofi --show drun 
+$menu = killall rofi || rofi -theme config -show drun
+$open = killall rofi || rofi -theme config -show window
 
 
 #################
@@ -39,12 +41,31 @@ exec-once = swaync
 exec-once = nm-applet
 exec-once = fcitx5
 exec-once = blueman-applet
-exec-once = pcmanfm --daemon-mode
-exec-once = discord --start-minimized
-exec-once = tp-auto-kbbl -b 1 -t 10
+exec-once = thunar --daemon
+exec-once = openrgb -p /home/insti/.config/OpenRGB/config.orp
+
+exec-once = libinput-gestures-setup start
 exec-once = hyprpaper
 exec-once = /home/insti/.scripts/launch-waybar.sh
 exec-once = hypridle
+# exec-once = wl-paste -p --watch wl-copy -pc
+
+# exec-once = protonvpn-cli c -f
+
+windowrulev2 = workspace 4 silent, class:^(looking-glass-client)$
+exec-once = gtk-launch looking-glass.desktop
+
+windowrulev2 = float,class:^(Bitwarden)$
+exec-once = bitwarden-desktop
+
+windowrulev2 = workspace 5 silent, class:^(vesktop)$
+exec-once = vesktop
+
+windowrulev2 = workspace 5 silent, class:^(spotify-launcher)$
+windowrulev2 = workspace 5 silent, class:^(Spotify)$
+exec-once = spotify-launcher
+
+exec-once = brightnessctl -d tpacpi::kbd_backlight set 0 && brightnessctl -d tpacpi::kbd_backlight set 1
 
 
 #############################
@@ -54,10 +75,22 @@ exec-once = hypridle
 # https://wiki.hyprland.org/Configuring/Environment-variables/
 
 env = QT_QPA_PLATFORMTHEME,gtk2
+env = QT_IM_MODULE,fcitx
+# env = ELECTRON_OZONE_PLATFORM_HINT,auto
+env = MOZ_ENABLE_WAYLAND,1
+
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
+
+env = SSH_AUTH_SOCK,$XDG_RUNTIME_DIR/gcr/ssh
+
+env = EDITOR,vim
 env = MAKEOPTS,-j8
 env = MAKEFLAGS,-j8
+
+# env = ANDROID_HOME,$HOME/android-sdk
+# env = PATH,$PATH:$ANDROID_HOME/platform-tools
+env = JAVA_HOME,/usr/lib/jvm/java-21-openjdk
 
 #####################
 ### LOOK AND FEEL ###
@@ -73,7 +106,7 @@ general {
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
     col.active_border = rgb(2aa198)
-    col.inactive_border = rgb(002b36)
+    col.inactive_border = rgb(073642)
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
     resize_on_border = false 
@@ -82,6 +115,8 @@ general {
     allow_tearing = false
 
     layout = dwindle
+
+    # no_cursor_warps = true
 }
 
 decoration {
@@ -91,10 +126,10 @@ decoration {
     active_opacity = 1.0
     inactive_opacity = 1.0
 
-    drop_shadow = true
+    drop_shadow = false
     shadow_range = 4
     shadow_render_power = 3
-    col.shadow = rgba(002b36aa)
+    col.shadow = rgba(073642aa)
 
     # https://wiki.hyprland.org/Configuring/Variables/#blur
     blur {
@@ -127,12 +162,16 @@ dwindle {
 }
 
 master {
-    new_is_master = true
+#    new_is_master = true
+}
+
+cursor {
+   no_warps = true
 }
 
 misc { 
-    force_default_wallpaper = 0 # Set to 0 or 1 to disable the anime mascot wallpapers
-    disable_hyprland_logo = true # If true disables the random hyprland logo / anime girl background. :(
+    force_default_wallpaper = 0
+    disable_hyprland_logo = true
 }
 
 
@@ -150,6 +189,7 @@ input {
     kb_rules =
 
     follow_mouse = 1
+    mouse_refocus = false
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
     accel_profile = flat
@@ -159,15 +199,21 @@ input {
         clickfinger_behavior = true
         tap-to-click = true
     }
+
+    tablet {
+
+    }
 }
 
 gestures {
     workspace_swipe = true
     workspace_swipe_fingers = 4
     workspace_swipe_forever = true
+    workspace_swipe_create_new = false
 }
 
 # Example per-device config
+# 
 
 device {
     name = elan-touchpad
@@ -185,6 +231,30 @@ device {
     kb_options = caps:swapescape
 }
 
+device {
+    name = wacom-intuos-pt-s-2-finger
+    sensitivity = 0
+    accel_profile = adaptive
+}
+
+device {
+    name = razer-razer-mouse-dock-pro-1
+    accel_profile = flat
+    sensitivity = 0
+}
+
+device {
+    name = bsk-v3-pro-mouse
+    accel_profile = flat
+    sensitivity = 0
+}
+
+device {
+    name = logitech-g502-1
+    accel_profile = flat
+    sensitivity = 0
+}
+
 
 ####################
 ### KEYBINDINGSS ###
@@ -197,8 +267,8 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 bind = $mainMod, Return, exec, $terminal
 bind = $mainMod, Q, killactive,
 bind = $mainMod, M, exit,
-bind = $mainMod, E, exec, $fileManager
-bind = $mainMod, V, togglefloating,
+bind = $mainMod, F, fullscreen,
+bind = $mainMod SHIFT, F, togglefloating,
 bind = $mainMod, D, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
@@ -220,6 +290,9 @@ bind = $mainMod, 7, workspace, 7
 bind = $mainMod, 8, workspace, 8
 bind = $mainMod, 9, workspace, 9
 bind = $mainMod, 0, workspace, 10
+
+bind = $mainMod CTRL, left, workspace, e-1
+bind = $mainMod CTRL, right, workspace, e+1
 
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
 bind = $mainMod SHIFT, 1, movetoworkspacesilent, 1
@@ -244,15 +317,20 @@ bind = $mainMod, mouse_up, workspace, e-1
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
+# bind = , mouse:274, exec, ;
 
 #Other
 bind = $mainMod, L, exec, hyprlock
 bind = $mainMod, C, exec, hyprpicker -ar
-bind = $mainMod, X, exec, grim -g "$(slurp)"
-bind = $mainMod, Z, exec, grim
+bind = $mainMod, X, exec, screenshot.sh -S
+bind = $mainMod, Z, exec, screenshot.sh -F
+bind = $mainMod, V, exec, screenshot.sh -W
 
 # Laptop Stuff
-bindl = , switch:on:Lid Switch, exec, hyprlock
+bindl = ,  switch:on:Lid Switch, exec, hyprlock
+# bindl = ,  switch:on:Lid Switch, exec, hyprctl keyword monitor "eDP-1, disable"
+# bindl = , switch:off:Lid Switch, exec, hyprctl keyword monitor "eDP-1, 1920x1080@60, auto, 1.25"
+
 bind = , XF86AudioMute, exec, pactl set-sink-mute 0 toggle
 bind = , XF86AudioLowerVolume, exec, pactl set-sink-volume 0 -5%
 bind = , XF86AudioRaiseVolume, exec, pactl set-sink-volume 0 +5%
@@ -266,6 +344,10 @@ bind = , XF86Bluetooth, exec, rfkill toggle bluetooth
 bind = , XF86Keyboard, exec, 
 bind = , XF86Favorites, exec, 
 
+# Mouse Stuff
+bind = , XF86Launch5, exec, playerctl play-pause    #F14
+bind = , XF86Launch6, exec, playerctl next          #F15
+bind = , XF86Launch7, exec,                         #F16
 
 ##############################
 ### WINDOWS AND WORKSPACES ###
@@ -281,9 +363,36 @@ bind = , XF86Favorites, exec,
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
+windowrulev2 = float,class:^(org.fcitx.fcitx5-config-qt)$
+windowrulev2 = float,class:^(org.pulseaudio.pavucontrol)$
+windowrulev2 = float,class:^(blueman-manager)$
+windowrulev2 = float,title:^(File Operation Progress)$
+
+# windowrulev2 = idleinhibit fullscreen, class:^(*)$
+windowrulev2 = idleinhibit fullscreen, fullscreen:1
+windowrulev2 = idleinhibit always, class:^(looking-glass-client)$
 
 workspace = 1, monitor:eDP-1, persistent:true
 workspace = 2, monitor:eDP-1, persistent:true
 workspace = 3, monitor:eDP-1, persistent:true
 workspace = 4, monitor:eDP-1, persistent:true
 workspace = 5, monitor:eDP-1, persistent:true
+
+
+###############
+### PLUGINS ###
+###############
+
+plugin {
+    hyprexpo {
+        columns = 2
+        gap_size = 1
+        bg_col = rgb(111111)
+        workspace_method = first 1 # [center/first] [workspace] e.g. first 1 or center m+1
+
+        enable_gesture = true # laptop touchpad
+        gesture_fingers = 4  # 3 or 4
+        gesture_distance = 300 # how far is the "max"
+        gesture_positive = false # positive = swipe down. Negative = swipe up.
+    }
+}
