--- a/waterlily/.config/waybar/config.jsonc
+++ b/waterlily/.config/waybar/config.jsonc
@@ -14,16 +14,16 @@
 
     // Module Positioning
     "modules-left": [
-        "hyprland/workspaces",
         "hyprland/window",
+        "hyprland/window#title",
     ],
     "modules-center": [
-        
+        "mpris",
     ],
     "modules-right": [
-        "mpris",
         "pulseaudio",
         "backlight",
+        "idle_inhibitor",
         "custom/weather",
         "clock#date",
         "clock",
@@ -32,19 +32,15 @@
     ],
 
     // Modules Configuration
-    "custom/arch": {
-        "format": "󰣇 insti",
-    },
-
-    "hyprland/workspaces": {
-        "disable-scroll": true,
-        "all-outputs": true,
-        "warp-on-scroll": false,
-    },
-
     "hyprland/window": {
         "separate-outputs": false,
         "format": "{class}",
+    },
+
+    "hyprland/window#title": {
+        "separate-outputs": false,
+        "format": "{title}",
+        "max-length": 48,
     },
 
     "mpris": {
@@ -69,16 +65,11 @@
         "format-muted": "<span color=\"#586e75\">󰸈 Muted</span>",
         "format-icons": {
             "headphone": "",
-            "hands-free": "",
-            "headset": "",
-            "phone": "",
-            "portable": "",
-            "car": "",
-            "default": ["", "", "", ""]
+            "default": ["", "", "", ""],
         },
         "scroll-step": 5,
-        "on-click": "pavucontrol",
-        "on-click-right": "pulseaudio-control next-node",
+        "on-click": "pulseaudio-control next-node",
+        "on-click-right": "pavucontrol",
         "on-click-middle": "pulseaudio-control togmute",
         "ignored-sinks": ["Easy Effects Sink"]
     },
@@ -88,9 +79,17 @@
         "format-icons": [""] ,
     },
 
+    "idle_inhibitor": {
+        "format": "{icon}",
+        "format-icons": {
+            "activated": "<span color=\"#2aa198\">󰅶 on</span>",
+            "deactivated": "<span color=\"#586e75\">󰛊 off</span>"
+        },
+    },
+
     "custom/weather": {
         "format": "{}",
-        "exec": "~/.config/polybar/scripts/openweathermap-simple.sh",
+        "exec": "~/.config/waybar/scripts/openweathermap-simple.sh",
         "interval": 60,
     },
 
@@ -155,14 +154,13 @@
         "gpu-usage",
         "memory",
         "disk",
-        "battery"
     ],
     "modules-center": [
-        
+        "hyprland/workspaces",
     ],
     "modules-right": [
-        "qbittorrent",
-        "mullvad",
+        "battery",
+        "custom/power",
         "network",
         "tray",
     ],
@@ -190,9 +188,13 @@
             "warning": 30,
             "critical": 10,
         },
-        "format": "{icon} {capacity}% {power:0.2f}W 󱐋 {time}",
+        "format": "{icon} {capacity}%",
+        "format-discharging": "{icon} {capacity}% {power:0.2f}W 󱐋 {time}",
         "format-charging": "{icon} {capacity}% {power:0.2f}W 󰚥 {time}",
         "format-icons": {
+            "plugged": [
+                "󰂄",
+            ],
             "discharging": [
                 "<span color=\"#dc322f\">󰂎</span>", 
                 "<span color=\"#dc322f\">󰁺</span>", 
@@ -227,6 +229,26 @@
         // "format-icons": ["", "", "", "", ""],
     },
 
+    "hyprland/workspaces": {
+        "disable-scroll": true,
+        "all-outputs": true,
+        "warp-on-scroll": false,
+        "format": "{icon}",
+        "format-icons": {
+            "1": "1",
+            "2": "2",
+            "3": "3",
+            "4": "4",
+            "5": "5",
+        }
+    },
+
+    "custom/power": {
+        "format": "{}",
+        "exec": "~/.config/waybar/scripts/power-usage.sh",
+        "interval": 3,
+    },
+
     "network": {
         "format": "󰇚 {bandwidthDownBytes} 󰕒 {bandwidthUpBytes}",
         "format-disconnected": "", //An empty format will hide the module.
@@ -244,4 +266,272 @@
         "show-passive-items": false,
     }
 },
+
+{
+    // Bar 1 Metadata
+    "layer": "bottom", // Waybar at top layer
+    "output": "DP-2",
+    "position": "top", // Waybar position (top|bottom|left|right)
+    "height": 32, // Waybar height (to be removed for auto height)
+    // "width": 1280, // Waybar width
+    "spacing": 8, // Gaps between modules (4px)
+    "margin-top": 8,
+    "margin-left": 8,
+    "margin-right": 8,
+
+    // Module Positioning
+    "modules-left": [
+        "hyprland/window",
+        "hyprland/window#title",
+    ],
+    "modules-center": [
+        "mpris",
+    ],
+    "modules-right": [
+        "pulseaudio",
+        "backlight",
+        "idle_inhibitor",
+        "custom/weather",
+        "clock#date",
+        "clock",
+        "custom/notification",
+        "custom/swaync",
+    ],
+
+    // Modules Configuration
+    "hyprland/window": {
+        "separate-outputs": false,
+        "format": "{class}",
+    },
+
+    "hyprland/window#title": {
+        "separate-outputs": false,
+        "format": "{title}",
+        "max-length": 48,
+    },
+
+    "mpris": {
+        "format": "{player_icon} {title} / {artist}",
+        "format-paused": "{status_icon} {title} / {artist}",
+        "player-icons": {
+            "default": "",
+            "spotify": "<span color=\"#859900\"></span>",
+            "vlc": "<span color=\"#cb4b16\">󰕼</span>",
+            "mpv": "<span color=\"#6c71c4\"></span>"
+        },
+        "status-icons": {
+            "paused": ""
+        },
+        "ignored-players": ["vlc", "mpv", "firefox", "Google-chrome"],
+        "tooltip-format": "Playing on {player}"
+    },
+
+    "pulseaudio": {
+        "format": "{icon} {volume}%",
+        "format-bluetooth": "󰂰 {volume}%",
+        "format-muted": "<span color=\"#586e75\">󰸈 Muted</span>",
+        "format-icons": {
+            "headphone": "",
+            "default": ["", "", "", ""],
+        },
+        "scroll-step": 5,
+        "on-click": "pulseaudio-control next-node",
+        "on-click-right": "pavucontrol",
+        "on-click-middle": "pulseaudio-control togmute",
+        "ignored-sinks": ["Easy Effects Sink"]
+    },
+
+    "backlight": {
+        "format": "{icon} {percent}%",
+        "format-icons": [""] ,
+    },
+
+    "idle_inhibitor": {
+        "format": "{icon}",
+        "format-icons": {
+            "activated": "<span color=\"#2aa198\">󰅶 on</span>",
+            "deactivated": "<span color=\"#586e75\">󰛊 off</span>"
+        },
+    },
+
+    "custom/weather": {
+        "format": "{}",
+        "exec": "~/.config/waybar/scripts/openweathermap-simple.sh",
+        "interval": 60,
+    },
+
+    "clock#date": {
+        "format": " {:%Y %m %d}",
+        "interval": 1,
+    },
+
+    "clock": {
+        "format": " {:%H %M %S}",
+        "interval": 1,
+    },
+
+    "custom/notification": {
+        "tooltip": true,
+        "format": "{icon} {}",
+        "format-icons": {
+            "notification": "<span color=\"#2aa198\">󰂚</span>",
+            "none": "󰂜",
+            "dnd-notification": "<span color=\"#cb4b16\">󰂠</span>",
+            "dnd-none": "<span color=\"#cb4b16\">󰪓</span>",
+            "inhibited-notification": "󰂠",
+            "inhibited-none": "󰪓",
+            "dnd-inhibited-notification": "󰂠",
+            "dnd-inhibited-none": "󰪓"
+        },
+        "return-type": "json",
+        "exec-if": "which swaync-client",
+        "exec": "swaync-client -swb",
+        "on-click": "swaync-client -t -sw",
+        "on-click-right": "swaync-client -d -sw",
+        "escape": true
+    },
+
+    "custom/swaync": {
+        "format": "{}",
+        "exec-if": "which swaync-client",
+        // "exec": "swaync-client -swb | jq .text",
+        "exec": "swaync-client -swb",
+        "return-type": "json",
+        "interval": 1,
+    },
+},
+
+{
+    // Bar 2 Metadata
+    "layer": "bottom", // Waybar at top layer
+    "output": "DP-2",
+    "position": "bottom", // Waybar position (top|bottom|left|right)
+    "height": 32, // Waybar height (to be removed for auto height)
+    // "width": 1280, // Waybar width
+    "spacing": 8, // Gaps between modules (4px)
+    "margin-bottom": 8,
+    "margin-left": 8,
+    "margin-right": 8,
+
+    // Module Positioning
+    "modules-left": [
+        "cpu",
+        "cpu-freq",
+        "cpu-temp",
+        "gpu-usage",
+        "memory",
+        "disk",
+    ],
+    "modules-center": [
+        "hyprland/workspaces",
+    ],
+    "modules-right": [
+        "battery",
+        "custom/power",
+        "network",
+        "tray",
+    ],
+
+    // Modules Configuration
+    "cpu": {
+        "interval": 3,
+        "format": " {load:0.2f}% {avg_frequency:0.2f}GHz"
+    },
+
+    "memory": {
+        "interval": 3,
+        "format": " {percentage}% {used:0.2f}GiB",
+    },
+
+    "disk": {
+        "interval": 30,
+        "format": "󰉉 {percentage_used}% {specific_free:0.0f}GB",
+        "unit": "GB",
+    },
+ 
+    "battery": {
+        "interval": 3,
+        "states": {
+            "warning": 30,
+            "critical": 10,
+        },
+        "format": "{icon} {capacity}%",
+        "format-discharging": "{icon} {capacity}% {power:0.2f}W 󱐋 {time}",
+        "format-charging": "{icon} {capacity}% {power:0.2f}W 󰚥 {time}",
+        "format-icons": {
+            "plugged": [
+                "󰂄",
+            ],
+            "discharging": [
+                "<span color=\"#dc322f\">󰂎</span>", 
+                "<span color=\"#dc322f\">󰁺</span>", 
+                "<span color=\"#cb4b16\">󰁻</span>", 
+                "󰁼", 
+                "󰁽", 
+                "󰁾", 
+                "󰁿", 
+                "󰂀", 
+                "󰂁", 
+                "󰂂", 
+                "󰂄"
+            ],
+            "charging": [
+                "<span color=\"#dc322f\">󰢟</span>", 
+                "<span color=\"#dc322f\">󰢜</span>", 
+                "<span color=\"#cb4b16\">󰂆</span>", 
+                "󰂇", 
+                "󰂈", 
+                "󰢝", 
+                "󰂉", 
+                "󰢞", 
+                "󰂊", 
+                "󰂋", 
+                "󰂅"
+            ],
+            "full": [
+                "<span color=\"#2aa198\">󰂄</span>",
+            ],
+        },
+        "format-time": "{H} {m}",
+        // "format-icons": ["", "", "", "", ""],
+    },
+
+    "hyprland/workspaces": {
+        "disable-scroll": true,
+        "all-outputs": true,
+        "warp-on-scroll": false,
+        "format": "{icon}",
+        "format-icons": {
+            "1": "1",
+            "2": "2",
+            "3": "3",
+            "4": "4",
+            "5": "5",
+        }
+    },
+
+    "custom/power": {
+        "format": "{}",
+        "exec": "~/.config/waybar/scripts/power-usage.sh",
+        "interval": 3,
+    },
+
+    "network": {
+        "format": "󰇚 {bandwidthDownBytes} 󰕒 {bandwidthUpBytes}",
+        "format-disconnected": "", //An empty format will hide the module.
+        "tooltip-format": "{ifname} via {gwaddr} 󰊗",
+        "tooltip-format-wifi": " {ifname} @ {essid} ({signalStrength}%) | {ipaddr}/{cidr}",
+        "tooltip-format-ethernet": " {ifname} | {ipaddr}/{cidr}",
+        "tooltip-format-disconnected": "Disconnected",
+        "max-length": 50,
+        "interval": 1,
+    },
+
+    "tray": {
+        "icon-size": 16,
+        "spacing": 8,
+        "show-passive-items": false,
+    }
+},
+
 ]
